<resources>
    <string name="app_name">JohnEcommerce</string>
    <string name="email_hint">Email</string>
    <string name="senha_hint">Senha</string>
    <string name="login_text">Login</string>
    <string name="n_o_tem_conta">Não tem conta ?</string>
    <string name="ja_tem_conta">Já tem conta ?</string>
    <string name="escreva_se">Escreva-se</string>
    <string name="login_fazer">Fazer login</string>
    <string name="recuperar_senha">Recuperar senha</string>
    <string name="hint_nome">Nome</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_senha">Senha</string>
    <string name="hint_senhaconfirma">Confirme sua senha</string>
    <string name="criar_conta">Criar conta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_txt">Login</string>
    <string name="ex_cal_ados">Ex Calçados</string>
    <string name="todos_os_produtos">Todos os Produtos</string>
    <string name="fechar_txt">Fechar</string>
    <string name="salvar_txt">Salvar</string>
</resources>