<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1F374A"
    tools:context=".autenticacao.LoginActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/btnvoltar"
                layout="@layout/ib_voltar"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="InvalidId" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit_off"
                android:drawableStart="@drawable/ic_email_off"
                android:drawablePadding="16dp"
                android:layout_marginHorizontal="24dp"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                app:layout_constraintBottom_toTopOf="@+id/edtSenha"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <EditText
                android:id="@+id/edtSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit_off"
                android:drawableStart="@drawable/ic_senha_off"
                android:drawablePadding="16dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:hint="@string/senha_hint"
                android:inputType="textPassword"
                android:padding="16dp"
                app:layout_constraintBottom_toTopOf="@+id/btnLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_btn"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/login_text"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/progressBarLogin"
                app:layout_constraintTop_toBottomOf="@+id/edtSenha"
                tools:layout_editor_absoluteX="0dp" />

            <ProgressBar
                android:id="@+id/progressBarLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                tools:visibility="visible"
                android:indeterminateTint="@color/laranja"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/n_o_tem_conta" />

                <TextView
                    android:id="@+id/btnCadstrase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:paddingVertical="16dp"
                    android:text="@string/escreva_se"
                    android:textColor="@color/laranja"
                    android:textStyle="bold" />


            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>